enhance: prevent labels from overlapping

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,6 @@ body {
 }
 
 #app {
-	width: 100%;
-	height: 60vh;
+	width: 1200px;
+	height: 800px;
 }
